tests/e2e/negative/unexpected-char/input.ela
int magic(int a, int b) {
    return @;
}
